syntax = "proto3";

package kaswallet_proto;

service Wallet {
    rpc GetAddresses (GetAddressesRequest) returns (GetAddressesResponse) {}
    rpc NewAddress (NewAddressRequest) returns (NewAddressResponse) {}
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
    rpc GetUtxos (GetUtxosRequest) returns (GetUtxosResponse) {}
    rpc CreateUnsignedTransactions (CreateUnsignedTransactionsRequest)
            returns (CreateUnsignedTransactionsResponse) {}
    rpc Sign (SignRequest) returns (SignResponse) {}
    rpc Broadcast (BroadcastRequest) returns (BroadcastResponse) {}
    rpc Send (SendRequest) returns (SendResponse) {}
    rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {}
}

message GetAddressesRequest {}
message GetAddressesResponse {
    repeated string address = 1;
}

message NewAddressRequest {}
message NewAddressResponse {string address = 1;}

message GetBalanceRequest
{
    bool include_balance_per_address = 1; // If false - returns only totals
}
message GetBalanceResponse {
    uint64 available = 1;
    uint64 pending = 2;
    repeated AddressBalances address_balances = 3; // only populated if is_verbose=true
}
message AddressBalances {
    string address = 1;
    uint64 available = 2;
    uint64 pending = 3;
}

message GetUtxosRequest {
    repeated string addresses = 1; // Returns only UTXOs for requested addresses if provided
    bool include_pending = 2;      // Does not return pending coinbase UTXOs if false
    bool include_dust = 3;         // Does not return UTXOs whose value is less than the fee to spend them
}
message GetUtxosResponse {
    repeated AddressToUtxos addresses_to_utxos = 1;
}
message AddressToUtxos {
    string address = 1;
    repeated Utxo utxos = 2;
}
message Utxo {
    Outpoint outpoint = 1;
    UtxoEntry utxo_entry = 2;
    bool is_pending = 3;
    bool is_dust = 4;
}
message Outpoint {
    string transaction_id = 1;
    uint32 index = 2;
}
message UtxoEntry {
    uint64 amount = 1;
    ScriptPublicKey script_public_key = 2;
    uint64 block_daa_score = 3;
    bool is_coinbase = 4;
}
message ScriptPublicKey {
    uint32 version = 1;
    string script_public_key = 2;
}


message CreateUnsignedTransactionsRequest {
    TransactionDescription transaction_description = 1;
}
message TransactionDescription {
    string to_address = 1;
    uint64 amount = 2;                      // mutually exclusive with `isSendAll`
    bool is_send_all = 3;                   // mutually exclusive with `amount`
    bytes payload = 4;
    repeated string from_addresses = 5;     // spends only utxos from given addresses.
    repeated Outpoint utxos = 6;            // spends only given utxos. Mutually exclusive with `from_addressess`
    bool use_existing_change_address = 7;   // Don't generate a new change adress if true
    FeePolicy fee_policy = 8;                 // minimum = 1.0
}
message FeePolicy {
    oneof feePolicy {
        double max_fee_rate = 1;
        double exact_fee_rate = 2;
        uint64 max_fee = 3;
    }
}
message CreateUnsignedTransactionsResponse {
    repeated bytes unsigned_transactions = 1;
}

// Since SignRequest contains a password - this command should only be used on a
// trusted or secure connection
message SignRequest {
    repeated bytes unsigned_transactions = 1;
    string password = 2;
}
message SignResponse {
    repeated bytes signed_transactions = 1;
}

message BroadcastRequest {
    repeated bytes transactions = 1;
}
message BroadcastResponse {
    repeated string transaction_ids = 1;
}


// Since SignRequest contains a password - this command should only be used on a
// trusted or secure connection
message SendRequest {
    TransactionDescription transaction_description = 1;
    string password = 2;
}
message SendResponse {
    repeated string transaction_ids = 1;
    repeated bytes signed_transactions = 2;
}

message GetVersionRequest {}
message GetVersionResponse {string version = 1;}
